corrected fieldsettab spacing

--- a/templates-admin/styles/less/InputFields.less
+++ b/templates-admin/styles/less/InputFields.less
@@ -64,6 +64,7 @@ textarea{
 .InputfieldForm{
 	margin: 0;
 }
+.InputfieldForm > .InputfieldFieldsetTabOpen,
 .InputfieldForm > .InputfieldWrapper{
 	padding: 1.5em @innerPadding 0 @innerPadding;
 	margin: 0 -@innerPadding;
